--- a/ZadanieStazowe/Base.lproj/Main.storyboard
+++ b/ZadanieStazowe/Base.lproj/Main.storyboard
@@ -33,19 +33,19 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="kHn-8U-SbQ">
-                                                    <rect key="frame" x="8" y="8" width="464" height="83"/>
+                                                    <rect key="frame" x="8" y="8" width="304" height="83"/>
                                                     <subviews>
                                                         <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ht2-4I-ckA">
-                                                            <rect key="frame" x="0.0" y="0.0" width="464" height="28"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="304" height="28"/>
                                                             <subviews>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Nazwa miejsca:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="e0Y-qQ-CCC">
-                                                                    <rect key="frame" x="0.0" y="0.0" width="408" height="28"/>
+                                                                    <rect key="frame" x="0.0" y="0.0" width="248" height="28"/>
                                                                     <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
                                                                     <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="Place 5" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="oEf-es-fhT">
-                                                                    <rect key="frame" x="408" y="0.0" width="56" height="28"/>
+                                                                    <rect key="frame" x="248" y="0.0" width="56" height="28"/>
                                                                     <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
                                                                     <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                                                     <nil key="highlightedColor"/>
@@ -53,16 +53,16 @@
                                                             </subviews>
                                                         </stackView>
                                                         <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RZn-VZ-qF9">
-                                                            <rect key="frame" x="0.0" y="28" width="464" height="27"/>
+                                                            <rect key="frame" x="0.0" y="28" width="304" height="27"/>
                                                             <subviews>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Długość geograficzna:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="qMo-g4-C8u">
-                                                                    <rect key="frame" x="0.0" y="0.0" width="380" height="27"/>
+                                                                    <rect key="frame" x="0.0" y="0.0" width="220" height="27"/>
                                                                     <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
                                                                     <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="12.412412" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="aoF-ZL-UGx">
-                                                                    <rect key="frame" x="380" y="0.0" width="84" height="27"/>
+                                                                    <rect key="frame" x="220" y="0.0" width="84" height="27"/>
                                                                     <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
                                                                     <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                                                     <nil key="highlightedColor"/>
@@ -70,16 +70,16 @@
                                                             </subviews>
                                                         </stackView>
                                                         <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="v6j-ck-FA1">
-                                                            <rect key="frame" x="0.0" y="55" width="464" height="28"/>
+                                                            <rect key="frame" x="0.0" y="55" width="304" height="28"/>
                                                             <subviews>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Szerokość geograficzna:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="vEJ-mG-BQG">
-                                                                    <rect key="frame" x="0.0" y="0.0" width="380" height="28"/>
+                                                                    <rect key="frame" x="0.0" y="0.0" width="220" height="28"/>
                                                                     <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
                                                                     <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="124.12421" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="GsZ-Gd-5V6">
-                                                                    <rect key="frame" x="380" y="0.0" width="84" height="28"/>
+                                                                    <rect key="frame" x="220" y="0.0" width="84" height="28"/>
                                                                     <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
                                                                     <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                                                     <nil key="highlightedColor"/>
@@ -271,11 +271,11 @@
             </objects>
             <point key="canvasLocation" x="-262" y="206"/>
         </scene>
-        <!--Item 1-->
+        <!--Mapa-->
         <scene sceneID="lEA-Dw-OJv">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="WRU-dk-Etf" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item 1" id="YAB-b6-hDO"/>
+                    <tabBarItem key="tabBarItem" title="Mapa" id="YAB-b6-hDO"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="0hW-jM-Xip">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
@@ -290,11 +290,11 @@
             </objects>
             <point key="canvasLocation" x="690.39999999999998" y="-121.88905547226388"/>
         </scene>
-        <!--Item 2-->
+        <!--Ostatnie-->
         <scene sceneID="AnQ-5v-gUY">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="vqj-M4-sDp" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item 2" id="QP6-E0-aB6"/>
+                    <tabBarItem key="tabBarItem" title="Ostatnie" id="QP6-E0-aB6"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="C3D-oK-H7j">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
